Token Verification completed