@@ -11,7 +11,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
@@ -26,16 +25,15 @@ public class UserService implements IUserService {
 
     @Override
     public User registerUser(RegistrationRequest registrationRequest) {
-        var user = new User(registrationRequest.getFirstName(),
+        return new User(registrationRequest.getFirstName(),
                 registrationRequest.getLastName(),
                 registrationRequest.getEmail(),
                 passwordEncoder.encode(registrationRequest.getPassword()),
-                Arrays.asList(new Role("ROLE_USER")));
-        return user;
+                List.of(new Role("ROLE_USER")));
     }
 
     @Override
     public User findByEmail(String email) {
-        return userRepository.findByEmail(email).orElseThrow(()-> new UsernameNotFoundException("Usrer Not Found"));
+        return userRepository.findByEmail(email).orElseThrow(()-> new UsernameNotFoundException("User Not Found"));
     }
 }
